--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ HELP.md
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
+### SPRING ###
+application.properties
+
 ### STS ###
 .apt_generated
 .classpath
